# dronefly-discord

./: .gitignore  pyproject.toml
dronefly/discord/: commands.py  embeds.py  menus.py
