[tool.flake8]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]

[tool.poetry]
name = "dronefly-discord"
version = "0.1.5.pre0"
description = "Dronefly Discord library"
authors = ["Ben Armstrong <synrg@debian.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [
        { include = "dronefly/discord" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
# pyinaturalist = "=0.20.0.dev0"
pyinaturalist = { git = "https://github.com/pyinat/pyinaturalist", rev="8b4f4c6d6b0f7799fcd3663ff2cc3148f34e3b85" }
inflect = "^5.3.0"
discord-py = ">=2.3.1"
# dronefly-core = "=0.3.9.dev0"
dronefly-core = { git = "https://github.com/dronefly-garden/dronefly-core", rev="35a1d06f5835b8618cf7431e320800c88cb2df36" }

[tool.poetry.dev-dependencies]
black = "^24.3.0"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pylint = "^2.10.2"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
