[project]
name = "dronefly-discord"
version = "0.2.1"
description = "Dronefly Discord library"
authors = [{ name = "Ben Armstrong", email = "synrg@debian.org" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "AGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "inflect>=5.3.0,<6",
    "discord-py>=2.3.1",
    "dronefly-core==0.5.1",
]

[tool.flake8]
max-line-length = 100

[dependency-groups]
dev = [
    "black>=24.3.0,<25",
    "flake8-pyproject>=1.2.4,<2",
    "pytest>=7.2.1,<8",
    "pytest-mock>=3.10.0,<4",
    "pylint>=2.10.2,<3",
    "pytest-asyncio>=0.20.3,<0.21",
    "pre-commit>=4.6.0",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["dronefly.discord"]
module-root = ""

[tool.uv.sources]
dronefly-discord = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
